docker: use alpine 3.10 and java 11